<?xml version="1.0"?>
<package format="2">
  <name>odor_tracker</name>
  <version>0.0.0</version>
  <description>The tracking_master package</description>

  <maintainer email="arunava_nag@nevada.unr.edu">Arunava Nag</maintainer>
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roslaunch</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>


  </export>
</package>
